[package]
name = "passmaker"
version = "0.1.0"
authors = ["ussr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
debug-assertions = true
overflow-checks = true

[dependencies]
rand = "0.8"